pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag = Slytherin) conn: All Connections)'
        nsx-id: "1925"
    creationTimestamp: null
    name: admin-policy-0
    namespace: default
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector: {}
                podSelector: {}
          ports: null
    priority: 1
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag != DB) conn: All Connections)'
        nsx-id: "1925"
    creationTimestamp: null
    name: admin-policy-1
    namespace: default
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector: {}
                podSelector: {}
          ports: null
    priority: 2
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: tag__DB
                      operator: DoesNotExist
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (tag = Gryffindor) dst: (tag = Slytherin) conn: All Connections)'
        nsx-id: "1926"
    creationTimestamp: null
    name: admin-policy-2
    namespace: default
spec:
    egress:
        - action: Allow
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: tag__Slytherin
                          operator: Exists
    priority: 3
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (tag = Gryffindor) dst: (tag != DB) conn: All Connections)'
        nsx-id: "1926"
    creationTimestamp: null
    name: admin-policy-3
    namespace: default
spec:
    egress:
        - action: Allow
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: tag__DB
                          operator: DoesNotExist
    priority: 4
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag = Gryffindor) conn: All Connections)'
        nsx-id: "1927"
    creationTimestamp: null
    name: admin-policy-4
    namespace: default
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector: {}
                podSelector: {}
          ports: null
    priority: 5
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag != DB) conn: All Connections)'
        nsx-id: "1927"
    creationTimestamp: null
    name: admin-policy-5
    namespace: default
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector: {}
                podSelector: {}
          ports: null
    priority: 6
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: tag__DB
                      operator: DoesNotExist
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag = Hufflepuff) conn: All Connections)'
        nsx-id: "1928"
    creationTimestamp: null
    name: admin-policy-6
    namespace: default
spec:
    egress:
        - action: Allow
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: tag__Hufflepuff
                          operator: Exists
    priority: 7
    subject:
        pods:
            namespaceSelector: {}
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag != DB) conn: All Connections)'
        nsx-id: "1928"
    creationTimestamp: null
    name: admin-policy-7
    namespace: default
spec:
    egress:
        - action: Allow
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: tag__DB
                          operator: DoesNotExist
    priority: 8
    subject:
        pods:
            namespaceSelector: {}
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin-policy-8
    namespace: default
spec:
    egress:
        - action: Deny
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector: {}
    priority: 9
    subject:
        pods:
            namespaceSelector: {}
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin-policy-9
    namespace: default
spec:
    ingress:
        - action: Deny
          from:
            - pods:
                namespaceSelector: {}
                podSelector: {}
          ports: null
    priority: 10
    subject:
        pods:
            namespaceSelector: {}
            podSelector: {}
status:
    conditions: null
