pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrCondsAdmin_AdminPoliciesEnabled/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: default deny policy for namespace default
        nsx-id: none
    name: default-deny-for-default
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
